# iras_interfaces

./: CMakeLists.txt  README.md  package.xml
action/: Manip.action  PlanMoveTo.action
msg/: Brick.msg  ManipType.msg  Pallet.msg  Wall.msg
srv/: AddObjects.srv  AddPallet.srv  GetMortarPoses.srv  GetNextBrick.srv  GetPickPose.srv  GetPlacePose.srv  MoveGripper.srv  MoveToPose.srv  OnBrickEvent.srv  RemoveObject.srv
