<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iras_interfaces</name>
  <version>2.2.3</version>
  <description>A package containing some standard service definitions.</description>
  <license>Apache License 2.0</license>
  
  <maintainer email="giridhar6937@gmail.com">Giridhar Bukka</maintainer>
  <maintainer email="denis@stogl.de">Denis Štogl</maintainer>

  <author email="giridhar6937@gmail.com">Giridhar Bukka</author>
  <author email="denis@stogl.de">Denis Štogl</author>

  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>sr_manipulation_interfaces</depend>
  <depend>shape_msgs</depend>
  <depend>action_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>